--- a/races.html
+++ b/races.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 11:48 -->
+<!-- 2023-09-03 Sun 16:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Races</title>
@@ -202,30 +202,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org6ec53e1">1. Human</a>
+<li><a href="#orgc925568">1. Human</a>
 <ul>
-<li><a href="#org1b6011a">1.1. Racial traits</a></li>
+<li><a href="#org252048d">1.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org2c1795a">2. Elf</a>
+<li><a href="#org10c5323">2. Elf</a>
 <ul>
-<li><a href="#orgd3a1a35">2.1. Racial traits</a></li>
+<li><a href="#org77896ff">2.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org7f1bce9">3. Orc</a></li>
-<li><a href="#orgf931f62">4. Demon</a></li>
-<li><a href="#orgff6f474">5. Hobbit</a>
+<li><a href="#org8613544">3. Orc</a>
 <ul>
-<li><a href="#org886bd29">5.1. Racial traits</a></li>
+<li><a href="#org8a1e3cc">3.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org1a70ad5">6. Dwarf</a>
+<li><a href="#org139d35e">4. Demon</a>
 <ul>
-<li><a href="#orga46ade4">6.1. Racial traits</a></li>
+<li><a href="#orgf11bf8f">4.1. Racial Traits</a></li>
 </ul>
 </li>
-<li><a href="#org80e8950">7. Elemental</a></li>
-<li><a href="#org7b33cbe">8. Reptilian</a></li>
+<li><a href="#org6d44a73">5. Hobbit</a>
+<ul>
+<li><a href="#org1e35e97">5.1. Racial traits</a></li>
+</ul>
+</li>
+<li><a href="#org1d276db">6. Dwarf</a>
+<ul>
+<li><a href="#orge980b7d">6.1. Racial traits</a></li>
+</ul>
+</li>
+<li><a href="#org13f78d6">7. Elemental</a>
+<ul>
+<li><a href="#orga13e43b">7.1. Racial Traits</a></li>
+</ul>
+</li>
+<li><a href="#org49e22e6">8. Reptilian</a>
+<ul>
+<li><a href="#orgb47ba2b">8.1. Racial Traits</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -262,91 +278,91 @@
 <tr>
 <td class="org-left">Human</td>
 <td class="org-right">6</td>
-<td class="org-left">+1 to any</td>
-<td class="org-left">-1 to any</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+2 any</td>
+<td class="org-left">-2 any</td>
+<td class="org-left">Extra Language</td>
 </tr>
 
 <tr>
 <td class="org-left">Elf</td>
 <td class="org-right">6</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+1 WIS +1 INT</td>
+<td class="org-left">-1 CON</td>
+<td class="org-left">Elvish, Cold Weakness</td>
 </tr>
 
 <tr>
 <td class="org-left">Orc</td>
 <td class="org-right">8</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+2 STR +2 CON</td>
+<td class="org-left">-2 INT -2 CHA</td>
+<td class="org-left">Orc, Savage Attacks</td>
 </tr>
 
 <tr>
 <td class="org-left">Demon</td>
 <td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+2 CHA</td>
+<td class="org-left">-1 STR</td>
+<td class="org-left">Heat Resistance,</td>
 </tr>
 
 <tr>
 <td class="org-left">Hobbit</td>
 <td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+1 to CHA</td>
+<td class="org-left">-2 CON</td>
+<td class="org-left">Lucky, Brave</td>
 </tr>
 
 <tr>
 <td class="org-left">Dwarf</td>
 <td class="org-right">7</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+2 CON +1 STR</td>
+<td class="org-left">-2 WIS</td>
+<td class="org-left">Darkvision, Tool proficiency</td>
 </tr>
 
 <tr>
 <td class="org-left">Elemental</td>
 <td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+1 CON</td>
+<td class="org-left">-1 DEX</td>
+<td class="org-left">Special Move</td>
 </tr>
 
 <tr>
 <td class="org-left">Reptilian</td>
 <td class="org-right">7</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">+5 AC +1 INT</td>
+<td class="org-left">-3 CHA</td>
+<td class="org-left">Waterbreathing, Cold Weakness, Heat Advantage</td>
 </tr>
 </tbody>
 </table>
-<div id="outline-container-org6ec53e1" class="outline-2">
-<h2 id="org6ec53e1"><span class="section-number-2">1.</span> Human</h2>
+<div id="outline-container-orgc925568" class="outline-2">
+<h2 id="orgc925568"><span class="section-number-2">1.</span> Human</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-The white bread of WORLD&rsquo;s races. Not particularly good at anything, not incompetent either.
+The white bread of lineages. Not particularly good at anything, not incompetent either.
 </p>
 
 <p>
 Humans can quickly learn 1 other language, if they meet a good teacher.
 </p>
 </div>
-<div id="outline-container-org1b6011a" class="outline-3">
-<h3 id="org1b6011a"><span class="section-number-3">1.1.</span> Racial traits</h3>
+<div id="outline-container-org252048d" class="outline-3">
+<h3 id="org252048d"><span class="section-number-3">1.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
-<li>+1 to any</li>
-<li>-1 to any</li>
+<li>Language proficiency</li>
+<li>You gain +2 to any ability score, and -2 to to any ability score (can be split among 2 different abilities)</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org2c1795a" class="outline-2">
-<h2 id="org2c1795a"><span class="section-number-2">2.</span> Elf</h2>
+<div id="outline-container-org10c5323" class="outline-2">
+<h2 id="org10c5323"><span class="section-number-2">2.</span> Elf</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Graceful, beautiful, and intensely magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world. Elves can live to be more than 700 years old, giving them a very broad and measured perspective on troubling events.
@@ -356,91 +372,141 @@ Graceful, beautiful, and intensely magical beings attuned to nature and the harm
 Elves can speak Elvish:
 </p>
 </div>
-<div id="outline-container-orgd3a1a35" class="outline-3">
-<h3 id="orgd3a1a35"><span class="section-number-3">2.1.</span> Racial traits</h3>
+<div id="outline-container-org77896ff" class="outline-3">
+<h3 id="org77896ff"><span class="section-number-3">2.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>+2 to dexterity</li>
 <li>Perception proficiency</li>
+<li>Weakness to cold</li>
 <li>Can&rsquo;t be lulled to sleep by magic</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org7f1bce9" class="outline-2">
-<h2 id="org7f1bce9"><span class="section-number-2">3.</span> Orc</h2>
+<div id="outline-container-org8613544" class="outline-2">
+<h2 id="org8613544"><span class="section-number-2">3.</span> Orc</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-Hulking, proud beings that tare
+Hulking, proud beings that fight to protect those they choose to be in their clan. Many venture from their tribe seeking adventure a glory for their mighty deeds. The fury of an Orc is not to be trifled with.
+</p>
+
+<p>
+Orcs can speak Orc and read Dwarvish.
 </p>
 </div>
+<div id="outline-container-org8a1e3cc" class="outline-3">
+<h3 id="org8a1e3cc"><span class="section-number-3">3.1.</span> Racial traits</h3>
+<div class="outline-text-3" id="text-3-1">
+<ul class="org-ul">
+<li>Darkvision</li>
+<li>Intimidation Proficiency</li>
+<li><span class="underline">Savage Attacks</span>: When you score a critical hit with a melee weapon attack, you can roll one of the weapon&rsquo;s damage dice one additional time and add it to the extra damage of the critical hit.</li>
+</ul>
 </div>
-<div id="outline-container-orgf931f62" class="outline-2">
-<h2 id="orgf931f62"><span class="section-number-2">4.</span> Demon</h2>
+</div>
+</div>
+<div id="outline-container-org139d35e" class="outline-2">
+<h2 id="org139d35e"><span class="section-number-2">4.</span> Demon</h2>
 <div class="outline-text-2" id="text-4">
+<p>
+Straight from the fires of Hell, demons blend into the world, causing strife and mischief wherever they see fit. They depend on their skills in deception and their innate magical attunement to compensate for their lack of durability.
+</p>
+</div>
+
+<div id="outline-container-orgf11bf8f" class="outline-3">
+<h3 id="orgf11bf8f"><span class="section-number-3">4.1.</span> Racial Traits</h3>
+<div class="outline-text-3" id="text-4-1">
+<ul class="org-ul">
+<li>Fire Resistance</li>
+<li><span class="underline">Foul Creature</span>: Other races will view you with disdain</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-orgff6f474" class="outline-2">
-<h2 id="orgff6f474"><span class="section-number-2">5.</span> Hobbit</h2>
+</div>
+<div id="outline-container-org6d44a73" class="outline-2">
+<h2 id="org6d44a73"><span class="section-number-2">5.</span> Hobbit</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but have little patience for complex plans and grand designs.
 </p>
 </div>
 
-<div id="outline-container-org886bd29" class="outline-3">
-<h3 id="org886bd29"><span class="section-number-3">5.1.</span> Racial traits</h3>
+<div id="outline-container-org1e35e97" class="outline-3">
+<h3 id="org1e35e97"><span class="section-number-3">5.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
-<li>+1 to charisma</li>
-<li>Lucky</li>
+<li><span class="underline">Brave</span>: You have advantage on saving throws against being frightened</li>
+<li><span class="underline">Lucky</span>: When you roll a 1 on an attack roll, ability check, or saving throw, you can reroll the die. You must use the new result.</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org1a70ad5" class="outline-2">
-<h2 id="org1a70ad5"><span class="section-number-2">6.</span> Dwarf</h2>
+<div id="outline-container-org1d276db" class="outline-2">
+<h2 id="org1d276db"><span class="section-number-2">6.</span> Dwarf</h2>
 <div class="outline-text-2" id="text-6">
 <p>
-Deep in the roots of WORLD&rsquo;s mountains, dwarven kingdoms have raised great treasures, and waged great wars against goblin kind. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t seen as particularly bright by the other races of WORLD.
-</p>
-
-<p>
-Accustomed to life underground, dwarves have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dimly light.
+Deep in the roots of mountains, dwarven kingdoms have raised great treasures, and waged great wars. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t usually seen as particularly bright.
 </p>
 
 <p>
 Dwarves can speak Dwarvish.
 </p>
 </div>
-<div id="outline-container-orga46ade4" class="outline-3">
-<h3 id="orga46ade4"><span class="section-number-3">6.1.</span> Racial traits</h3>
+<div id="outline-container-orge980b7d" class="outline-3">
+<h3 id="orge980b7d"><span class="section-number-3">6.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-6-1">
 <ul class="org-ul">
-<li>+2 to constitution</li>
-<li>+1 to strength</li>
 <li>Tool proficiency</li>
 <li>Dark vision</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org80e8950" class="outline-2">
-<h2 id="org80e8950"><span class="section-number-2">7.</span> Elemental</h2>
+<div id="outline-container-org13f78d6" class="outline-2">
+<h2 id="org13f78d6"><span class="section-number-2">7.</span> Elemental</h2>
 <div class="outline-text-2" id="text-7">
+<p>
+A creature native to the elemental plains. Some creatures are little more than animated masses of their respective elements, others are biological forms infused with elemental energy.
+</p>
+</div>
+<div id="outline-container-orga13e43b" class="outline-3">
+<h3 id="orga13e43b"><span class="section-number-3">7.1.</span> Racial Traits</h3>
+<div class="outline-text-3" id="text-7-1">
+<ul class="org-ul">
+<li><span class="underline">Special Move</span>: Work with DM to create a special move using your elemental powers.</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org7b33cbe" class="outline-2">
-<h2 id="org7b33cbe"><span class="section-number-2">8.</span> Reptilian</h2>
+</div>
+<div id="outline-container-org49e22e6" class="outline-2">
+<h2 id="org49e22e6"><span class="section-number-2">8.</span> Reptilian</h2>
 <div class="outline-text-2" id="text-8">
+<p>
+Reptilian inhabitants of a foreign land that have made their first strides towards integrating into greater society. Covered in scaly armor and possessing the ability to breath underwater, this species has had a difficult time operating in extreme cold but gets advantages on their actions in extreme heat.
+</p>
+
+<p>
+Reptilians speak Lizard.
+</p>
+</div>
+<div id="outline-container-orgb47ba2b" class="outline-3">
+<h3 id="orgb47ba2b"><span class="section-number-3">8.1.</span> Racial Traits</h3>
+<div class="outline-text-3" id="text-8-1">
+<ul class="org-ul">
+<li>Waterbreathing</li>
+<li>Weakness to cold</li>
+<li>Heat advantage</li>
+<li><span class="underline">Foul Creature</span>: Other races will view you with disdain</li>
+</ul>
 <hr />
+</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 11:48</p>
+<p class="date">Created: 2023-09-03 Sun 16:48</p>
 </div>
 </body>
 </html>
