--- a/dm-materials/dm.html
+++ b/dm-materials/dm.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-17 Thu 17:45 -->
+<!-- 2023-09-04 Mon 14:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DM Resources</title>
@@ -193,7 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type="text/css" href="../static/stylesheets/default-style.css" />
+<link rel="stylesheet" type="text/css" href="../static/stylesheets/menu.css" />
 </head>
 <body>
 <div id="content" class="content">
@@ -202,72 +202,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1970b57">1. Campaign DM Scripts</a></li>
-<li><a href="#org3a7e443">2. Enemies</a></li>
-<li><a href="#org0ffdb73">3. Campaigns</a>
-<ul>
-<li><a href="#org21b1145">3.1. Campaign 0</a></li>
-<li><a href="#org22b51dd">3.2. Campaign 1</a></li>
-</ul>
-</li>
-<li><a href="#org05e2950">4. Guides</a>
-<ul>
-<li><a href="#orge29d5f7">4.1. Damage Guide</a></li>
-<li><a href="#org91ce2e3">4.2. Spell Index</a></li>
-<li><a href="#org3b9114c">4.3. Alchemy Index</a></li>
-<li><a href="#org409b3bb">4.4. Druid Circles</a></li>
-<li><a href="#orgc4cda6d">4.5. Material Guide</a></li>
-</ul>
-</li>
+<li><a href="#orgd85955b">1. Campaign DM Scripts</a></li>
+<li><a href="#org09f5ba1">2. Enemies</a></li>
+<li><a href="#orgc4556a0">3. Campaigns</a></li>
+<li><a href="#org26b3133">4. Guides</a></li>
 </ul>
 </div>
 </div>
 <hr />
-<div id="outline-container-org1970b57" class="outline-2">
-<h2 id="org1970b57"><span class="section-number-2">1.</span> <a href="scripts/scripts.html#ID-18a96883-cc40-409c-9fb5-80d5ab0c8379">Campaign DM Scripts</a></h2>
+<div id="outline-container-orgd85955b" class="outline-2">
+<h2 id="orgd85955b"><span class="section-number-2">1.</span> <a href="scripts/scripts.html#ID-18a96883-cc40-409c-9fb5-80d5ab0c8379">Campaign DM Scripts</a></h2>
 </div>
-<div id="outline-container-org3a7e443" class="outline-2">
-<h2 id="org3a7e443"><span class="section-number-2">2.</span> <a href="enemies/enemies.html#ID-69fc67b6-3d4a-451e-ab1e-e23bc20215ba">Enemies</a></h2>
+<div id="outline-container-org09f5ba1" class="outline-2">
+<h2 id="org09f5ba1"><span class="section-number-2">2.</span> <a href="enemies/enemies.html#ID-69fc67b6-3d4a-451e-ab1e-e23bc20215ba">Enemies</a></h2>
 </div>
-<div id="outline-container-org0ffdb73" class="outline-2">
-<h2 id="org0ffdb73"><span class="section-number-2">3.</span> Campaigns</h2>
+<div id="outline-container-orgc4556a0" class="outline-2">
+<h2 id="orgc4556a0"><span class="section-number-2">3.</span> Campaigns</h2>
 <div class="outline-text-2" id="text-3">
-</div>
-<div id="outline-container-org21b1145" class="outline-3">
-<h3 id="org21b1145"><span class="section-number-3">3.1.</span> <a href="c0/c0.html#ID-ccf4874d-a608-4195-ab9b-5364d484cf20">Campaign 0</a></h3>
-</div>
-<div id="outline-container-org22b51dd" class="outline-3">
-<h3 id="org22b51dd"><span class="section-number-3">3.2.</span> <a href="c1/c1.html#ID-651d4c39-081f-4aa1-b450-cbf8f33587de">Campaign 1</a></h3>
+<ul class="org-ul">
+<li><a href="c0/c0.html#ID-ccf4874d-a608-4195-ab9b-5364d484cf20">Campaign 0</a></li>
+<li><a href="c1/c1.html#ID-651d4c39-081f-4aa1-b450-cbf8f33587de">Campaign 1</a></li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org05e2950" class="outline-2">
-<h2 id="org05e2950"><span class="section-number-2">4.</span> Guides</h2>
+<div id="outline-container-org26b3133" class="outline-2">
+<h2 id="org26b3133"><span class="section-number-2">4.</span> Guides</h2>
 <div class="outline-text-2" id="text-4">
-</div>
-<div id="outline-container-orge29d5f7" class="outline-3">
-<h3 id="orge29d5f7"><span class="section-number-3">4.1.</span> <a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">Damage Guide</a></h3>
-</div>
-<div id="outline-container-org91ce2e3" class="outline-3">
-<h3 id="org91ce2e3"><span class="section-number-3">4.2.</span> <a href="../guides/spell-index.html#ID-b1b752cb-445c-4902-999d-443c83d5113a">Spell Index</a></h3>
-</div>
-<div id="outline-container-org3b9114c" class="outline-3">
-<h3 id="org3b9114c"><span class="section-number-3">4.3.</span> <a href="../guides/alchemy-index.html#ID-f10dc3fb-122b-4842-8b68-22aa974d9a57">Alchemy Index</a></h3>
-</div>
-<div id="outline-container-org409b3bb" class="outline-3">
-<h3 id="org409b3bb"><span class="section-number-3">4.4.</span> <a href="../guides/druid-circles.html#ID-628c4f0e-762b-428b-9a2c-03f97bb24737">Druid Circles</a></h3>
-</div>
-<div id="outline-container-orgc4cda6d" class="outline-3">
-<h3 id="orgc4cda6d"><span class="section-number-3">4.5.</span> <a href="material-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566cad236">Material Guide</a></h3>
-<div class="outline-text-3" id="text-4-5">
+<ul class="org-ul">
+<li><a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">Damage Guide</a></li>
+<li><a href="../guides/spell-index.html#ID-b1b752cb-445c-4902-999d-443c83d5113a">Spell Index</a></li>
+<li><a href="../guides/alchemy-index.html#ID-f10dc3fb-122b-4842-8b68-22aa974d9a57">Alchemy Index</a></li>
+<li><a href="../guides/druid-circles.html#ID-628c4f0e-762b-428b-9a2c-03f97bb24737">Druid Circles</a></li>
+<li><a href="material-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566cad236">Material Guide</a></li>
+</ul>
 <hr />
-</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-25 Tue 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-17 Thu 17:45</p>
+<p class="date">Created: 2023-09-04 Mon 14:55</p>
 </div>
 </body>
 </html>
