--- a/dnd.html
+++ b/dnd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 11:41 -->
+<!-- 2023-09-04 Mon 10:36 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DnD Landing Page</title>
@@ -193,13 +193,13 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type="text/css" href="static/stylesheets/default-style.css" />
+<link rel="stylesheet" type="text/css" href="static/stylesheets/menu.css" />
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">DnD Landing Page</h1>
 <hr />
-<div class="org-center">
+<div class="menu" id="org7a225b7">
 <p>
 <a href="character-sheet.pdf">Blank Character Sheet</a>
 </p>
@@ -227,13 +227,14 @@ World Overview
 <p>
 <a href="glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">Glossary</a>
 </p>
+
 </div>
 <hr />
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 11:41</p>
+<p class="date">Created: 2023-09-04 Mon 10:36</p>
 </div>
 </body>
 </html>
