--- a/races.html
+++ b/races.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-03 Sun 16:48 -->
+<!-- 2023-09-04 Mon 20:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Races</title>
@@ -202,44 +202,44 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc925568">1. Human</a>
+<li><a href="#org11bc576">1. Human</a>
 <ul>
-<li><a href="#org252048d">1.1. Racial traits</a></li>
+<li><a href="#org02821d1">1.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org10c5323">2. Elf</a>
+<li><a href="#org43e13d5">2. Elf</a>
 <ul>
-<li><a href="#org77896ff">2.1. Racial traits</a></li>
+<li><a href="#org2736e4b">2.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org8613544">3. Orc</a>
+<li><a href="#org0ebe7d2">3. Orc</a>
 <ul>
-<li><a href="#org8a1e3cc">3.1. Racial traits</a></li>
+<li><a href="#orgb0709c4">3.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org139d35e">4. Demon</a>
+<li><a href="#orga333824">4. Demon</a>
 <ul>
-<li><a href="#orgf11bf8f">4.1. Racial Traits</a></li>
+<li><a href="#orgb64c55e">4.1. Racial Traits</a></li>
 </ul>
 </li>
-<li><a href="#org6d44a73">5. Hobbit</a>
+<li><a href="#org6f06c43">5. Hobbit</a>
 <ul>
-<li><a href="#org1e35e97">5.1. Racial traits</a></li>
+<li><a href="#orgb0e2ad8">5.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org1d276db">6. Dwarf</a>
+<li><a href="#orga4e5751">6. Dwarf</a>
 <ul>
-<li><a href="#orge980b7d">6.1. Racial traits</a></li>
+<li><a href="#org0df02fa">6.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org13f78d6">7. Elemental</a>
+<li><a href="#org08dd32f">7. Elemental</a>
 <ul>
-<li><a href="#orga13e43b">7.1. Racial Traits</a></li>
+<li><a href="#org7156919">7.1. Racial Traits</a></li>
 </ul>
 </li>
-<li><a href="#org49e22e6">8. Reptilian</a>
+<li><a href="#orga91a1a8">8. Reptilian</a>
 <ul>
-<li><a href="#orgb47ba2b">8.1. Racial Traits</a></li>
+<li><a href="#org5cf217c">8.1. Racial Traits</a></li>
 </ul>
 </li>
 </ul>
@@ -247,7 +247,7 @@
 </div>
 <div class="org-center">
 <p>
-[<a href="dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="player_introduction.html#ID-f1eac65b-54c1-49f8-b117-e7d46f40b82c">Player Introduction</a>] [<a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>]
+[<a href="dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>]
 </p>
 </div>
 <hr />
@@ -340,8 +340,8 @@
 </tr>
 </tbody>
 </table>
-<div id="outline-container-orgc925568" class="outline-2">
-<h2 id="orgc925568"><span class="section-number-2">1.</span> Human</h2>
+<div id="outline-container-org11bc576" class="outline-2">
+<h2 id="org11bc576"><span class="section-number-2">1.</span> Human</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 The white bread of lineages. Not particularly good at anything, not incompetent either.
@@ -351,8 +351,8 @@ The white bread of lineages. Not particularly good at anything, not incompetent 
 Humans can quickly learn 1 other language, if they meet a good teacher.
 </p>
 </div>
-<div id="outline-container-org252048d" class="outline-3">
-<h3 id="org252048d"><span class="section-number-3">1.1.</span> Racial traits</h3>
+<div id="outline-container-org02821d1" class="outline-3">
+<h3 id="org02821d1"><span class="section-number-3">1.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>Language proficiency</li>
@@ -361,8 +361,8 @@ Humans can quickly learn 1 other language, if they meet a good teacher.
 </div>
 </div>
 </div>
-<div id="outline-container-org10c5323" class="outline-2">
-<h2 id="org10c5323"><span class="section-number-2">2.</span> Elf</h2>
+<div id="outline-container-org43e13d5" class="outline-2">
+<h2 id="org43e13d5"><span class="section-number-2">2.</span> Elf</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Graceful, beautiful, and intensely magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world. Elves can live to be more than 700 years old, giving them a very broad and measured perspective on troubling events.
@@ -372,8 +372,8 @@ Graceful, beautiful, and intensely magical beings attuned to nature and the harm
 Elves can speak Elvish:
 </p>
 </div>
-<div id="outline-container-org77896ff" class="outline-3">
-<h3 id="org77896ff"><span class="section-number-3">2.1.</span> Racial traits</h3>
+<div id="outline-container-org2736e4b" class="outline-3">
+<h3 id="org2736e4b"><span class="section-number-3">2.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>Perception proficiency</li>
@@ -383,8 +383,8 @@ Elves can speak Elvish:
 </div>
 </div>
 </div>
-<div id="outline-container-org8613544" class="outline-2">
-<h2 id="org8613544"><span class="section-number-2">3.</span> Orc</h2>
+<div id="outline-container-org0ebe7d2" class="outline-2">
+<h2 id="org0ebe7d2"><span class="section-number-2">3.</span> Orc</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Hulking, proud beings that fight to protect those they choose to be in their clan. Many venture from their tribe seeking adventure a glory for their mighty deeds. The fury of an Orc is not to be trifled with.
@@ -394,8 +394,8 @@ Hulking, proud beings that fight to protect those they choose to be in their cla
 Orcs can speak Orc and read Dwarvish.
 </p>
 </div>
-<div id="outline-container-org8a1e3cc" class="outline-3">
-<h3 id="org8a1e3cc"><span class="section-number-3">3.1.</span> Racial traits</h3>
+<div id="outline-container-orgb0709c4" class="outline-3">
+<h3 id="orgb0709c4"><span class="section-number-3">3.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-3-1">
 <ul class="org-ul">
 <li>Darkvision</li>
@@ -405,16 +405,16 @@ Orcs can speak Orc and read Dwarvish.
 </div>
 </div>
 </div>
-<div id="outline-container-org139d35e" class="outline-2">
-<h2 id="org139d35e"><span class="section-number-2">4.</span> Demon</h2>
+<div id="outline-container-orga333824" class="outline-2">
+<h2 id="orga333824"><span class="section-number-2">4.</span> Demon</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Straight from the fires of Hell, demons blend into the world, causing strife and mischief wherever they see fit. They depend on their skills in deception and their innate magical attunement to compensate for their lack of durability.
 </p>
 </div>
 
-<div id="outline-container-orgf11bf8f" class="outline-3">
-<h3 id="orgf11bf8f"><span class="section-number-3">4.1.</span> Racial Traits</h3>
+<div id="outline-container-orgb64c55e" class="outline-3">
+<h3 id="orgb64c55e"><span class="section-number-3">4.1.</span> Racial Traits</h3>
 <div class="outline-text-3" id="text-4-1">
 <ul class="org-ul">
 <li>Fire Resistance</li>
@@ -423,16 +423,16 @@ Straight from the fires of Hell, demons blend into the world, causing strife and
 </div>
 </div>
 </div>
-<div id="outline-container-org6d44a73" class="outline-2">
-<h2 id="org6d44a73"><span class="section-number-2">5.</span> Hobbit</h2>
+<div id="outline-container-org6f06c43" class="outline-2">
+<h2 id="org6f06c43"><span class="section-number-2">5.</span> Hobbit</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but have little patience for complex plans and grand designs.
+Nobody quite knows how the hobbit came to be. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but have little patience for complex plans and grand designs.
 </p>
 </div>
 
-<div id="outline-container-org1e35e97" class="outline-3">
-<h3 id="org1e35e97"><span class="section-number-3">5.1.</span> Racial traits</h3>
+<div id="outline-container-orgb0e2ad8" class="outline-3">
+<h3 id="orgb0e2ad8"><span class="section-number-3">5.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><span class="underline">Brave</span>: You have advantage on saving throws against being frightened</li>
@@ -441,8 +441,8 @@ Nobody quite knows how the hobbit came to be in WORLD. All that is known is that
 </div>
 </div>
 </div>
-<div id="outline-container-org1d276db" class="outline-2">
-<h2 id="org1d276db"><span class="section-number-2">6.</span> Dwarf</h2>
+<div id="outline-container-orga4e5751" class="outline-2">
+<h2 id="orga4e5751"><span class="section-number-2">6.</span> Dwarf</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Deep in the roots of mountains, dwarven kingdoms have raised great treasures, and waged great wars. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t usually seen as particularly bright.
@@ -452,8 +452,8 @@ Deep in the roots of mountains, dwarven kingdoms have raised great treasures, an
 Dwarves can speak Dwarvish.
 </p>
 </div>
-<div id="outline-container-orge980b7d" class="outline-3">
-<h3 id="orge980b7d"><span class="section-number-3">6.1.</span> Racial traits</h3>
+<div id="outline-container-org0df02fa" class="outline-3">
+<h3 id="org0df02fa"><span class="section-number-3">6.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-6-1">
 <ul class="org-ul">
 <li>Tool proficiency</li>
@@ -462,15 +462,15 @@ Dwarves can speak Dwarvish.
 </div>
 </div>
 </div>
-<div id="outline-container-org13f78d6" class="outline-2">
-<h2 id="org13f78d6"><span class="section-number-2">7.</span> Elemental</h2>
+<div id="outline-container-org08dd32f" class="outline-2">
+<h2 id="org08dd32f"><span class="section-number-2">7.</span> Elemental</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 A creature native to the elemental plains. Some creatures are little more than animated masses of their respective elements, others are biological forms infused with elemental energy.
 </p>
 </div>
-<div id="outline-container-orga13e43b" class="outline-3">
-<h3 id="orga13e43b"><span class="section-number-3">7.1.</span> Racial Traits</h3>
+<div id="outline-container-org7156919" class="outline-3">
+<h3 id="org7156919"><span class="section-number-3">7.1.</span> Racial Traits</h3>
 <div class="outline-text-3" id="text-7-1">
 <ul class="org-ul">
 <li><span class="underline">Special Move</span>: Work with DM to create a special move using your elemental powers.</li>
@@ -478,8 +478,8 @@ A creature native to the elemental plains. Some creatures are little more than a
 </div>
 </div>
 </div>
-<div id="outline-container-org49e22e6" class="outline-2">
-<h2 id="org49e22e6"><span class="section-number-2">8.</span> Reptilian</h2>
+<div id="outline-container-orga91a1a8" class="outline-2">
+<h2 id="orga91a1a8"><span class="section-number-2">8.</span> Reptilian</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Reptilian inhabitants of a foreign land that have made their first strides towards integrating into greater society. Covered in scaly armor and possessing the ability to breath underwater, this species has had a difficult time operating in extreme cold but gets advantages on their actions in extreme heat.
@@ -489,8 +489,8 @@ Reptilian inhabitants of a foreign land that have made their first strides towar
 Reptilians speak Lizard.
 </p>
 </div>
-<div id="outline-container-orgb47ba2b" class="outline-3">
-<h3 id="orgb47ba2b"><span class="section-number-3">8.1.</span> Racial Traits</h3>
+<div id="outline-container-org5cf217c" class="outline-3">
+<h3 id="org5cf217c"><span class="section-number-3">8.1.</span> Racial Traits</h3>
 <div class="outline-text-3" id="text-8-1">
 <ul class="org-ul">
 <li>Waterbreathing</li>
@@ -506,7 +506,7 @@ Reptilians speak Lizard.
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-03 Sun 16:48</p>
+<p class="date">Created: 2023-09-04 Mon 20:16</p>
 </div>
 </body>
 </html>
